ensure visibility on mobile screens

--- a/src/components/QRCode.module.scss
+++ b/src/components/QRCode.module.scss
@@ -2,7 +2,7 @@
 
 canvas.qr {
   // ick but easy
-  width: 100% !important;
+  width: min(100%, 80vmin) !important;
   height: auto !important;
   margin: auto;
   padding: $size-3;
